--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,4 +33,7 @@ dependencies {
     implementation 'com.android.support:cardview-v7:27.1.1'
     implementation 'com.jsibbold:zoomage:1.1.0'
     implementation 'com.github.bumptech.glide:glide:4.8.0'
+
+    //Custom Library
+    implementation 'io.github.yavski:fab-speed-dial:1.0.6'
 }
