--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,11 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 27
+
+    repositories {
+        mavenCentral()
+    }
+
     defaultConfig {
         applicationId "com.example.q.project2"
         minSdkVersion 18
@@ -21,7 +26,7 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'gun0912.ted:tedpermission:2.0.0'
-    implementation 'com.android.support:appcompat-v7:27.0.2'
+    implementation 'com.android.support:appcompat-v7:27.1.1'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
@@ -33,7 +38,10 @@ dependencies {
     implementation 'com.android.support:cardview-v7:27.1.1'
     implementation 'com.jsibbold:zoomage:1.1.0'
     implementation 'com.github.bumptech.glide:glide:4.8.0'
+//    implementation 'com.facebook.android:facebook-android-sdk:[4,5)'
 
     //Custom Library
     implementation 'io.github.yavski:fab-speed-dial:1.0.6'
+
+    implementation 'com.facebook.android:facebook-android-sdk:4.+'
 }
